# seleniumgrid-test-py

./: .gitignore  README.md  all-sites.json  automated_screenshot_capabilities.json  caps.json  conftest.py  pylenium.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  tagsreport.json  test.py  urls.json
ci/: run_auto_screenshots.sh  run_desktop_screenshots.sh  run_desktop_scroll_local_screenshot.sh  run_desktop_scroll_screenshot.sh  run_lambdatest.sh  run_mobile_scroll_screenshot.sh  test.sh
scripts/: lambdatest-screenshots.sh
tests/: test_demo.py  test_desktop_scroll_screenshot.py  test_example.py  test_forms.py  test_one_test_against_many_browsers.py
tests/content/: conftest.py  google_tags_check.py
tests/screenshot/: conftest.py  take_remote_screenshots.py  take_screenshots.py
tests/screenshots/: test_auto_screenshots.py  test_desktop_scroll_local_screenshot.py  test_desktop_scroll_screenshot.py  test_mobile_scroll_screenshot.py
